stderr
Printer.java:11: error: cannot find symbol
        this.function = FizzBuzz.fizzbuzz;
                                ^
  symbol:   variable fizzbuzz
  location: class FizzBuzz
Printer.java:15: error: cannot find symbol
        String displayText = this.function(number);
                                 ^
  symbol: method function(int)
2 errors
